--- a/index.html
+++ b/index.html
@@ -60,18 +60,30 @@
             <h2 class="visually-hidden">Наши качества</h2>
             <ul class="features-list">
                 <li class="features-list-item">
+                    <svg class="feature-icon" width="70" hight="70">
+                        <use href="./images/sprite.svg#antenna"></use>
+                    </svg>
                     <h3 class="title-thrd">Внимание к деталям</h3>
                     <p class="feature-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="features-list-item">
+                    <svg class="feature-icon" width="70" hight="70">
+                        <use href="./images/sprite.svg#clock"></use>
+                    </svg>
                     <h3 class="title-thrd">Пунктуальность</h3>
                     <p class="feature-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="features-list-item">
+                    <svg class="feature-icon" width="70" hight="70">
+                        <use href="./images/sprite.svg#diagram"></use>
+                    </svg>
                     <h3 class="title-thrd">Планирование</h3>
                     <p class="feature-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="features-list-item">
+                    <svg class="feature-icon" width="70" hight="70">
+                        <use href="./images/sprite.svg#astronaut"></use>
+                    </svg>
                     <h3 class="title-thrd">Современные технологии</h3>
                     <p class="feature-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
@@ -109,6 +121,32 @@
                     <div class="team-box">
                         <h3 class="title-thrd-team">Игорь Демьяненко</h3>
                         <p class="team-text">Product Designer</p>
+                        <ul class="social-list">
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="team-list-item">
@@ -116,6 +154,32 @@
                     <div class="team-box">
                         <h3 class="title-thrd-team">Ольга Репина</h3>
                         <p class="team-text">Frontend Developer</p>
+                        <ul class="social-list">
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="team-list-item">
@@ -123,6 +187,32 @@
                     <div class="team-box">
                         <h3 class="title-thrd-team">Николай Тарасов</h3>
                         <p class="team-text">Marketing</p>
+                        <ul class="social-list">
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="team-list-item">
@@ -130,11 +220,78 @@
                     <div class="team-box">
                         <h3 class="title-thrd-team">Михаил Ермаков</h3>
                         <p class="team-text">UI Designer</p>
+                        <ul class="social-list">
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#instagram"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#facebook"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#twitter"></use>
+                                </svg>
+                            </li>
+                            <li class="social-list-item">
+                                <a href="" class="social-list-link"></a>
+                                <svg class="team-media-link" width="20" higth="20">
+                                    <use href="./images/sprite.svg#linkedin"></use>
+                                </svg>
+                            </li>
+                        </ul>
                     </div>
                 </li>
             </ul>
             </div>
         </section>
+
+    <!-- CLIENTS -->
+    <section>
+        <div class="container">
+            <h2 class="title-scnd">Постоянные клиенты</h2>
+            <ul class="clients-list">
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-first"></use>
+                    </svg>
+                </li>
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-second"></use>
+                    </svg>
+                </li>
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-third"></use>
+                    </svg>
+                </li>
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-fourth"></use>
+                    </svg>
+                </li>
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-fifth"></use>
+                    </svg>
+                </li>
+                <li class="clients-item">
+                    <svg class="clients-logo" width="106" higth="60">
+                        <use href="./images/sprite.svg#client-sixth"></use>
+                    </svg>
+                </li>
+            </ul>
+
+        </div>
+
+    </section>
 
     </main>
     <!--FOOTER-->
@@ -153,6 +310,32 @@
                 </li>
                 <li class="address-list-item">
                     <a class="footer-link" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+            <ul class="social-list">
+                <li class="social-list-item">
+                    <a href="" class="social-list-link"></a>
+                    <svg class="team-media-link" width="20" higth="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link"></a>
+                    <svg class="team-media-link" width="20" higth="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link"></a>
+                    <svg class="team-media-link" width="20" higth="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link"></a>
+                    <svg class="team-media-link" width="20" higth="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
                 </li>
             </ul>
         </address>
