--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
                 </a>
                 <ul class="menu">
                     <li class="menu-item">
-                        <a class="menu-link current" href="./index.html">Студия</a>
+                        <a class="menu-link" href="./index.html">Студия</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-link " href="./portfolio.html">Портфолио</a>
+                        <a class="menu-link current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="menu-item">
                         <a class="menu-link" href="">Контакты</a>
@@ -36,9 +36,15 @@
             </nav>
                 <ul class="header-list">
                     <li class="header-item">
+                        <svg class="mail-icon" width="16" hight="12">
+                            <use href="./images/sprite.svg#mail"></use>
+                        </svg>
                         <a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="header-item">
+                        <svg class="phone-icon" width="16" hight="12">
+                            <use href="./images/sprite.svg#phone"></use>
+                        </svg>
                         <a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
