--- a/index.html
+++ b/index.html
@@ -142,28 +142,28 @@
                         <ul class="social-list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#instagram"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#facebook"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#twitter"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link" >
                                     <use href="./images/sprite.svg#linkedin"></use>
                                 </svg>
                                 </a>
@@ -179,28 +179,28 @@
                         <ul class="social-list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link" >
                                     <use href="./images/sprite.svg#instagram"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link" >
                                     <use href="./images/sprite.svg#facebook"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link" >
                                     <use href="./images/sprite.svg#twitter"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link" >
                                     <use href="./images/sprite.svg#linkedin"></use>
                                 </svg>
                                 </a>
@@ -216,28 +216,28 @@
                         <ul class="social-list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#instagram"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#facebook"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#twitter"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#linkedin"></use>
                                 </svg>
                                 </a>
@@ -253,28 +253,28 @@
                         <ul class="social-list">
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#instagram"></use>
                                 </svg>
                                 </a>    
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#facebook"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#twitter"></use>
                                 </svg>
                                 </a>
                             </li>
                             <li class="social-list-item">
                                 <a href="" class="social-list-link">
-                                <svg class="team-media-link" width="20" heigth="20">
+                                <svg class="team-media-link">
                                     <use href="./images/sprite.svg#linkedin"></use>
                                 </svg>
                                 </a>
@@ -292,34 +292,46 @@
             <h2 class="title-scnd">Постоянные клиенты</h2>
             <ul class="clients-list">
                 <li class="clients-item">
-                        <svg class="clients-logo" width="106" heigth="60">
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
                             <use href="./images/sprite.svg#client-first"></use>
                         </svg>
+                    </a>
                 </li>
                 <li class="clients-item">
-                    <svg class="clients-logo" width="106" heigth="60">
-                        <use href="./images/sprite.svg#client-second"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
+                            <use href="./images/sprite.svg#client-second"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="clients-item">
-                    <svg class="clients-logo" width="106" heigth="60">
-                        <use href="./images/sprite.svg#client-third"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
+                            <use href="./images/sprite.svg#client-third"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="clients-item">
-                    <svg class="clients-logo" width="106" heigth="60">
-                        <use href="./images/sprite.svg#client-fourth"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
+                            <use href="./images/sprite.svg#client-fourth"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="clients-item">
-                    <svg class="clients-logo" width="106" heigth="60">
-                        <use href="./images/sprite.svg#client-fifth"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
+                            <use href="./images/sprite.svg#client-fifth"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="clients-item">
-                    <svg class="clients-logo" width="106" heigth="60">
-                        <use href="./images/sprite.svg#client-sixth"></use>
-                    </svg>
+                    <a href="" class="clients-link">
+                        <svg class="clients-logo">
+                            <use href="./images/sprite.svg#client-sixth"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
 
@@ -353,28 +365,28 @@
                     <ul class="footer-social-list">
                         <li class="footer-social-list-item">
                             <a href="" class="footer-social-list-link">
-                            <svg class="footer-team-media-link" width="20" heigth="20">
+                            <svg class="footer-team-media-link">
                                 <use href="./images/sprite.svg#instagram"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="footer-social-list-item">
                             <a href="" class="footer-social-list-link">
-                            <svg class="footer-team-media-link" width="20" heigth="20">
+                            <svg class="footer-team-media-link">
                                 <use href="./images/sprite.svg#facebook"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="footer-social-list-item">
                             <a href="" class="footer-social-list-link">
-                            <svg class="footer-team-media-link" width="20" heigth="20">
+                            <svg class="footer-team-media-link">
                                 <use href="./images/sprite.svg#twitter"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="footer-social-list-item">
                             <a href="" class="footer-social-list-link">
-                            <svg class="footer-team-media-link" width="20" heigth="20">
+                            <svg class="footer-team-media-link">
                                 <use href="./images/sprite.svg#linkedin"></use>
                             </svg>
                             </a>
