--- a/portfolio.html
+++ b/portfolio.html
@@ -69,67 +69,85 @@
                 </ul>
                 <ul class="content-list">
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-1.jpg" alt="экран ноутбука" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Технокряк</h3>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
-                    </li>
-                    <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-2.jpg" alt="два баскетболиста" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Постер New Orlean vs Golden Star</h3>
-                            <p class="portfolio-text">Дизайн</p>
-                        </div>
-                    </li>
-                    <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-3.jpg" alt="эмблема ресторана морской еды" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Ресторан Seafood</h3>
-                            <p class="portfolio-text">Приложение</p>
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-1.jpg" alt="экран ноутбука" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Технокряк</h3>
+                                <p class="portfolio-text">Веб-сайт</p>
                             </div>
+                        </a>
                     </li>
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-4.jpg" alt="наушники" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Проект Prime</h3>
-                            <p class="portfolio-text">Маркетинг</p>
-                        </div>
-                    </li>
-                    <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-5.jpg" alt="две коробки" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Проект Boxes</h3>
-                        <p class="portfolio-text">Приложение</p>
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-2.jpg" alt="два баскетболиста" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Постер New Orlean vs Golden Star</h3>
+                                <p class="portfolio-text">Дизайн</p>
                             </div>
+                        </a>
                     </li>
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-6.jpg" alt="экран монитора" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Inspiration has no Borders</h3>
-                            <p class="portfolio-text">Веб-сайт</p>
-                        </div>
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-3.jpg" alt="эмблема ресторана морской еды" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Ресторан Seafood</h3>
+                                <p class="portfolio-text">Приложение</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-7.jpg" alt="открытая книга" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Издание Limited Edition</h3>
-                            <p class="portfolio-text">Дизайн   </p>
-                        </div> 
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-4.jpg" alt="наушники" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Проект Prime</h3>
+                                <p class="portfolio-text">Маркетинг</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="content-list-item">
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-5.jpg" alt="две коробки" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Проект Boxes</h3>
+                                <p class="portfolio-text">Приложение</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="content-list-item">
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-6.jpg" alt="экран монитора" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Inspiration has no Borders</h3>
+                                <p class="portfolio-text">Веб-сайт</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="content-list-item">
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-7.jpg" alt="открытая книга" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Издание Limited Edition</h3>
+                                <p class="portfolio-text">Дизайн   </p>
+                            </div>
+                        </a>
                    </li>
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-8.jpg" alt="ярлык" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Проект LAB</h3>
-                            <p class="portfolio-text">Маркетинг</p>
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-8.jpg" alt="ярлык" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Проект LAB</h3>
+                                <p class="portfolio-text">Маркетинг</p>
                             </div>
+                        </a>
                     </li>
                     <li class="content-list-item">
-                        <img class="content-img"src="./images/portfolio/portfolio-img-9.jpg" alt="работник печатает текст" width="370" height="294">
-                        <div class="content-box">
-                            <h3 class="title-potfolio">Growing Business</h3>
-                            <p class="portfolio-text">Приложение</p>
+                        <a href="" class="content-list-link">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-9.jpg" alt="работник печатает текст" width="370" height="294">
+                            <div class="content-box">
+                                <h3 class="title-potfolio">Growing Business</h3>
+                                <p class="portfolio-text">Приложение</p>
                             </div>
+                        </a>
                     </li>
                 </ul>
             </div>
