--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
      rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
      <link rel="stylesheet" href="./css/style.css">
 
 
@@ -70,7 +73,7 @@
                 <ul class="content-list">
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-1.jpg" alt="экран ноутбука" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-1.jpg" alt="экран ноутбука">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Технокряк</h3>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -79,7 +82,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-2.jpg" alt="два баскетболиста" width="370" height="294">
+                            <img class="content-img" src="./images/portfolio/portfolio-img-2.jpg" alt="два баскетболиста"> 
                             <div class="content-box">
                                 <h3 class="title-potfolio">Постер New Orlean vs Golden Star</h3>
                                 <p class="portfolio-text">Дизайн</p>
@@ -88,7 +91,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-3.jpg" alt="эмблема ресторана морской еды" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-3.jpg" alt="эмблема ресторана морской еды">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Ресторан Seafood</h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -97,7 +100,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-4.jpg" alt="наушники" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-4.jpg" alt="наушники">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Проект Prime</h3>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -106,7 +109,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-5.jpg" alt="две коробки" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-5.jpg" alt="две коробки">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Проект Boxes</h3>
                                 <p class="portfolio-text">Приложение</p>
@@ -115,7 +118,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-6.jpg" alt="экран монитора" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-6.jpg" alt="экран монитора">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Inspiration has no Borders</h3>
                                 <p class="portfolio-text">Веб-сайт</p>
@@ -124,7 +127,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-7.jpg" alt="открытая книга" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-7.jpg" alt="открытая книга">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Издание Limited Edition</h3>
                                 <p class="portfolio-text">Дизайн   </p>
@@ -133,7 +136,7 @@
                    </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-8.jpg" alt="ярлык" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-8.jpg" alt="ярлык">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Проект LAB</h3>
                                 <p class="portfolio-text">Маркетинг</p>
@@ -142,7 +145,7 @@
                     </li>
                     <li class="content-list-item">
                         <a href="" class="content-list-link">
-                            <img class="content-img"src="./images/portfolio/portfolio-img-9.jpg" alt="работник печатает текст" width="370" height="294">
+                            <img class="content-img"src="./images/portfolio/portfolio-img-9.jpg" alt="работник печатает текст">
                             <div class="content-box">
                                 <h3 class="title-potfolio">Growing Business</h3>
                                 <p class="portfolio-text">Приложение</p>
